# PythonPkg_FindingArtsEventsInNYC

./: .gitignore  CONTRIBUTING.rst  README.md  README.rst  Vignettes_NYCArtsFinder.ipynb  pyproject.toml
NYCArtsFinder/: main.py
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: modules.doctree  nycartsfinder.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt  nycartsfinder.rst.txt
docs/_build/html/source/: modules.html  nycartsfinder.html
eventsnyc/: main.py  pkg_run.py  returned.xml
tests/: test_NYCArtsFinder.py  test_eventsnyc.py
