[tool.poetry]
name = "NYCArtsFinder"
version = "0.3.0"
description = "Helping people find out Art Events Nearby"
authors = ["Chengwei Wang <chengwei.wendy.wang@gmail.com>"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "3.8.6"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
